# kettu-squeeze

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: agent_eval.py  harness.py  nab.py  portability.py
benchmarks/baselines/: hermes_deepseek-v4-pro_2026-07-12.json
benchmarks/configs/: gptoss_local.yaml  hermes_agent.yaml
benchmarks/reports/: phase4_report.json  phase4_report.md  portability_gptoss.json  soak_report.json
benchmarks/results/: runs.jsonl
datasets/adaptive-policy-v1/: manifest.yaml
datasets/adaptive-policy-v1/expected/: mismatch_analysis.json
docs/: ARCHITECTURE.md  AUDIT_FINDINGS.md  AUDIT_REPORT.md  BENCHMARK_REPORT.md  CLAIMS_AUDIT.md  DATA_HANDLING.md  EVAL_SPEC.md  INVARIANTS.md  KNOWN_LIMITATIONS.md  MCP_CONFIG.md  OPERATING_ASSUMPTIONS.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  SECURITY.md  THREAT_MODEL.md  V02_BASELINE.md  V04_FINAL_REPORT.md  V053_RESULTS.md  V05_SCIENTIFIC_REPORT.md  WHITEPAPER.md
evals/fixtures/adversarial/: fake_ref.txt  (+6 more)
reports/: comparative_eval.json
reports/v02-comparison/: executive_summary.md  full_metrics.json  validation_metrics.json
scripts/: comparative_eval.py  eval_v02_shadow.py  soak_test.py
skills/kettu-squeeze/: SKILL.md
src/kettu_squeeze/: types.py
src/kettu_squeeze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_dedup.py  test_p1.py  test_phase2.py  test_phase2_integration.py  test_phase2b_regression.py  test_policy.py  test_routing_regression.py  test_strategies.py  test_tasks.py
(+165 files in other folders)
